--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
   },
   "require-dev": {
     "phpunit/phpunit": "5.7.*",
-    "squizlabs/php_codesniffer": "^2.2 || ^3.0.2",
+    "squizlabs/php_codesniffer": "*",
     "wp-coding-standards/wpcs": "*",
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.4.3",
-    "phpcompatibility/php-compatibility": "^9.0",
-    "phpcompatibility/phpcompatibility-wp": "^2.0"
+    "dealerdirect/phpcodesniffer-composer-installer": "*",
+    "phpcompatibility/php-compatibility": "*",
+    "phpcompatibility/phpcompatibility-wp": "*"
   },
   "scripts": {
     "install-codestandards": [
