--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,9 @@ matrix:
   - php: 5.6
     env: WP_PULUGIN_DEPLOY=1
   - php: 5.5
+    env: WP_VERSION=4.7 WP_MULTISITE=0
   - php: 5.4
+    env: WP_VERSION=4.7 WP_MULTISITE=0
 before_script:
 - |
   # Remove Xdebug for a huge performance increase:
