--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "wordpress-semantic-linkbacks",
   "description": "Semantic Trackbacks/Pingbacks/WebMentions for WordPress!",
-  "dependencies": {
-    "grunt": "^1.0.4",
-    "npm": "^6.12.0"
-  },
   "devDependencies": {
+    "npm": "^6.13.4",
     "grunt": "^1.0.4",
     "grunt-wp-deploy": "^2.0.0",
     "grunt-wp-i18n": "^1.0.3",
