--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
   directories:
     - vendor
     - $HOME/.composer/cache
-after_success: 
+after_success:
 env:
   matrix:
   - WP_VERSION=latest WP_MULTISITE=0
@@ -19,6 +19,7 @@ env:
   - GH_REF: https://github.com/pfefferle/wordpress-semantic-linkbacks.git
 matrix:
   include:
+  - php: 7.4
   - php: 7.3
   - php: 7.2
   - php: 7.1
@@ -44,13 +45,9 @@ before_script:
         echo "Using PHPUnit 6.x"
         composer global require "phpunit/phpunit:^6"
         ;;
-      5.6|5.5|5.4|5.3)
-        echo "Using PHPUnit 4.x"
-        composer global require "phpunit/phpunit:^4"
-        ;;
-      5.2)
-        # Do nothing, use default PHPUnit 3.6.x
-        echo "Using default PHPUnit, hopefully 3.6"
+      5.6)
+        echo "Using PHPUnit 5.x"
+        composer global require "phpunit/phpunit:^5"
         ;;
       *)
         echo "No PHPUnit version handling for PHP version $TRAVIS_PHP_VERSION"
